--- a/index.css
+++ b/index.css
@@ -3,3 +3,17 @@
 	text-decoration: line-through;
 	color: #CCC;
 }
+
+.modal.fade {
+  opacity: 1;
+}
+
+.modal.fade .modal-dialog, .modal.in .modal-dialog {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+.modal-backdrop {
+	background-color: transparent;
+}
